amf-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: amf
  namespace: istio-system
spec:
  gateways:
  - 5g-gateway
  hosts:
  - '*'
  http:
  - match:
      - uri:
          prefix: /amf
    route:
    - destination:
        host: service-amf.nf-amf.svc.cluster.local
        port:
          number: 83
