pcrf-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pcrf
  namespace: istio-system
spec:
  gateways:
  - 5g-gateway
  hosts:
  - '*'
  http:
  - match:
      - uri:
          prefix: /pcrf
    route:
    - destination:
        host: service-pcrf.nf-pcrf.svc.cluster.local
        port:
          number: 84
