smf-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smf
  namespace: istio-system
spec:
  gateways:
  - 5g-gateway
  hosts:
  - '*'
  http:
  - match:
      - uri:
          prefix: /smf
    route:
    - destination:
        host: service-smf.nf-smf.svc.cluster.local
        port:
          number: 82
